# starrocks-play

./: .gitignore  README.md  env.tempate  pyproject.toml
data/: ids.txt
data/sql/: facette_chromosome.sql  facette_clinvar.sql  facette_gene_type.sql  facette_gnomad_af_between.sql  facette_hpo.sql  facette_omim.sql  facette_variant_type.sql  facette_vep_impact.sql  facette_zygosity.sql  occurrences_table.sql
starrocks_play/: script.py
